# DL.AI_agentic

./: .env copy  .gitignore  README.md  main.py  pyproject.toml
M4_UGL/: 4-5Demo.py  README.md  utils.py
M5_6UGL/: README.md  market_research_pipeline.py  tools.py  utils.py
M5_6UGL/agents/: agent_01_market_research.py  agent_02_graphic_designer.py  agent_03_copywriter.py  agent_04_packaging.py
M5_UGL_1_R/: README.md  demo.py  inv_utils.py  tools.py
reflection2_4/: README.md  coffee_sales.py  coffee_salesv2.py  run_html_server.py
reflection2_4/utils/: html_server.py  utils.py
resource/: README.md
useExternal2_7/: README.md  improvSql.py
